--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 
     <section class="mb-12">
         <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Writing & Case Studies</h2>
-        <!-- NOTION_PROJECTS_START -->
-        <p class="text-gray-400 italic">Syncing latest projects from Notion...</p>
-        <!-- NOTION_PROJECTS_END -->
+<!-- NOTION_PROJECTS_START -->
+<ul class="space-y-6">
+<li><a href="#" class="group flex items-center hover:text-gray-600 transition-colors"><span>*</span><span class="ml-2 opacity-0 group-hover:opacity-100 transition-opacity">→</span></a></li>
+</ul>
+<!-- NOTION_PROJECTS_END -->
     </section>
 
     <!-- Monetization Card -->
