Fix: Switch to supported Notion sync tool

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Writing & Case Studies</h2>
 <!-- NOTION_PROJECTS_START -->
 <ul class="space-y-6">
-
+<li><p class='text-gray-400'>No published projects found.</p></li>
 </ul>
 <!-- NOTION_PROJECTS_END -->
     </section>
