Fix: Robust Perl injection for Notion projects

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     </header>
 
     <section class="mb-12">
-        <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Philosophy</h2>
-        <p class="text-xl leading-relaxed text-gray-800">
-            I solve complex product problems by focusing on high-leverage trade-offs and user-centric systems. Documenting the future of PM in 2026.
-        </p>
+        <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Writing & Case Studies</h2>
+    <!-- NOTION_PROJECTS_START -->
+
+    <!-- NOTION_PROJECTS_END -->
     </section>
+
 
     <section class="mb-12">
         <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Writing & Case Studies</h2>
