Fix: Clean HTML markers for reliable sync

--- a/index.html
+++ b/index.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Utkarsh Kumar | Product Manager</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-white text-black max-w-2xl mx-auto px-6 py-24 antialiased">
-    <header class="mb-16">
-        <h1 class="text-4xl font-bold tracking-tighter">Utkarsh Kumar</h1>
-        <p class="text-gray-500 mt-2 text-lg">Product Manager & Builder</p>
-    </header>
-
-    <section class="mb-12">
-        <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Writing & Case Studies</h2>
-    <!-- NOTION_PROJECTS_START -->
-
-    <!-- NOTION_PROJECTS_END -->
-    </section>
-
-
-    <section class="mb-12">
-        <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Writing & Case Studies</h2>
-<!-- NOTION_PROJECTS_START -->
-<ul class="space-y-6">
-<li><p class='text-gray-400'>No published projects found.</p></li>
-</ul>
-<!-- NOTION_PROJECTS_END -->
-    </section>
-
-    <!-- Monetization Card -->
-    <section class="p-8 border border-gray-100 bg-gray-50 rounded-xl">
-        <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-2">Premium Access</h2>
-        <h3 class="text-lg font-bold mb-2">Private PM Frameworks & Scripts</h3>
-        <p class="text-gray-600 mb-6">Direct access to my private GitHub repo containing automated roadmapping tools and decision-matrix templates.</p>
-        <a href="#" class="inline-block bg-black text-white px-6 py-3 text-sm font-medium rounded-full hover:bg-gray-800 transition">Get Repo Access</a>
-    </section>
-
-    <footer class="mt-32 pt-8 border-t border-gray-100 text-[10px] text-gray-400 uppercase tracking-widest">
-        © 2026 UTKARSH KUMAR • BUILT WITH CLAUDE & GITHUB
-    </footer>
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Utkarsh Kumar | Product Manager</title>
+      <script src="https://cdn.tailwindcss.com"></script>
+   </head>
+   <body class="bg-white text-black max-w-2xl mx-auto px-6 py-24 antialiased">
+      <header class="mb-16">
+         <h1 class="text-4xl font-bold tracking-tighter">Utkarsh Kumar</h1>
+         <p class="text-gray-500 mt-2 text-lg">Product Manager & Builder</p>
+      </header>
+      <section class="mb-12">
+         <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Philosophy</h2>
+         <p class="text-xl leading-relaxed text-gray-800">
+            I solve complex product problems by focusing on high-leverage trade-offs and user-centric systems. Documenting the future of PM in 2026.
+         </p>
+      </section>
+      <section class="mb-12">
+         <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Writing & Case Studies</h2>
+         <!-- NOTION_PROJECTS_START -->
+         <p class="text-gray-400 italic">Latest projects from Notion will appear here...</p>
+         <!-- NOTION_PROJECTS_END -->
+      </section>
+      <!-- Monetization Card -->
+      <section class="p-8 border border-gray-100 bg-gray-50 rounded-xl">
+         <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-2">Premium Access</h2>
+         <h3 class="text-lg font-bold mb-2">Private PM Frameworks & Scripts</h3>
+         <p class="text-gray-600 mb-6">Direct access to my private GitHub repo containing automated roadmapping tools and decision-matrix templates.</p>
+         <a href="#" class="inline-block bg-black text-white px-6 py-3 text-sm font-medium rounded-full hover:bg-gray-800 transition">Get Repo Access</a>
+      </section>
+      <footer class="mt-32 pt-8 border-t border-gray-100 text-[10px] text-gray-400 uppercase tracking-widest">
+         © 2026 UTKARSH KUMAR • BUILT WITH CLAUDE & GITHUB
+      </footer>
+   </body>
 </html>
