Fix: Switch to supported Notion sync tool

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <section class="mb-12">
          <h2 class="text-xs font-bold uppercase tracking-widest text-gray-400 mb-4">Writing & Case Studies</h2>
          <!-- NOTION_PROJECTS_START -->
-         <p class="text-gray-400 italic">Latest projects from Notion will appear here...</p>
+<ul class="space-y-6">
+<li><p class='text-gray-400'>No projects found in Notion. Check the RequestPublishing checkbox.</p></li>
+</ul>
          <!-- NOTION_PROJECTS_END -->
       </section>
       <!-- Monetization Card -->
