Fix: Link to bundled Notion projects

--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
         <p class="writing-sub-title">Case Studies &amp; Frameworks</p>
         <div class="notion-zone">
 <!-- NOTION_PROJECTS_START -->
-<ul class='space-y-6'><li><a href='https://github.com/UtkarshaKumar' class='group flex items-center hover:text-gray-600 transition-colors'><span>View All Case Studies</span><span class='ml-2 opacity-0 group-hover:opacity-100 transition-opacity'>&#x2192;</span></a></li></ul>
+<ul class='space-y-6'><li><a href='https://github.com' class='group flex items-center hover:text-gray-600 transition-colors'><span>View All Notion Projects</span><span class='ml-2 opacity-0 group-hover:opacity-100 transition-opacity'>→</span></a></li></ul>
 <!-- NOTION_PROJECTS_END -->
         </div>
       </div>
