Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Utkarsh Kumar — Commerce &amp; AI Product Leader. 12 years building platforms that serve 1.5B+ users across 100+ countries. Deloitte Digital.">
   <meta property="og:title" content="Utkarsh Kumar — Commerce &amp; AI Product Leader">
   <meta property="og:description" content="12 years building digital platforms that serve 1.5B+ users and drive $100M+ in revenue across 100+ countries.">
+  <meta name="google-site-verification" content="cxAlENUh2zWQOcrAkGCdrbFSvZKZdPYXq73EYr12pAo" />
   <title>Utkarsh Kumar — Commerce &amp; AI Product Leader</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
